--- a/accidentologie.ipynb
+++ b/accidentologie.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\remi\\AppData\\Local\\Temp\\ipykernel_1708\\2463547708.py:7: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\remi\\AppData\\Local\\Temp\\ipykernel_13684\\2463547708.py:7: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_lieux = pd.read_csv('F:/Accidentologie/datas/lieux-2022.csv', sep = ';')\n"
      ]
     }
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,6 +1503,187 @@
     "#usagers \n",
     "#grav = -1 à retirer ? \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "caracts\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 55302 entries, 0 to 55301\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   Accident_Id  55302 non-null  int64 \n",
+      " 1   jour         55302 non-null  int64 \n",
+      " 2   mois         55302 non-null  int64 \n",
+      " 3   an           55302 non-null  int64 \n",
+      " 4   hrmn         55302 non-null  object\n",
+      " 5   lum          55302 non-null  int64 \n",
+      " 6   dep          55302 non-null  object\n",
+      " 7   com          55302 non-null  object\n",
+      " 8   agg          55302 non-null  int64 \n",
+      " 9   int          55302 non-null  int64 \n",
+      " 10  atm          55302 non-null  int64 \n",
+      " 11  col          55302 non-null  int64 \n",
+      " 12  adr          54069 non-null  object\n",
+      " 13  lat          55302 non-null  object\n",
+      " 14  long         55302 non-null  object\n",
+      "dtypes: int64(9), object(6)\n",
+      "memory usage: 6.3+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lieux\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 55302 entries, 0 to 55301\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   Num_Acc  55302 non-null  int64 \n",
+      " 1   catr     55302 non-null  int64 \n",
+      " 2   voie     50497 non-null  object\n",
+      " 3   v1       55302 non-null  int64 \n",
+      " 4   v2       5255 non-null   object\n",
+      " 5   circ     55302 non-null  int64 \n",
+      " 6   nbv      55302 non-null  object\n",
+      " 7   vosp     55302 non-null  int64 \n",
+      " 8   prof     55302 non-null  int64 \n",
+      " 9   pr       55302 non-null  object\n",
+      " 10  pr1      55302 non-null  object\n",
+      " 11  plan     55302 non-null  int64 \n",
+      " 12  lartpc   28 non-null     object\n",
+      " 13  larrout  55302 non-null  object\n",
+      " 14  surf     55302 non-null  int64 \n",
+      " 15  infra    55302 non-null  int64 \n",
+      " 16  situ     55302 non-null  int64 \n",
+      " 17  vma      55302 non-null  int64 \n",
+      "dtypes: int64(11), object(7)\n",
+      "memory usage: 7.6+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vehicules\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 94493 entries, 0 to 94492\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   Num_Acc      94493 non-null  int64  \n",
+      " 1   id_vehicule  94493 non-null  object \n",
+      " 2   num_veh      94493 non-null  object \n",
+      " 3   senc         94493 non-null  int64  \n",
+      " 4   catv         94493 non-null  int64  \n",
+      " 5   obs          94493 non-null  int64  \n",
+      " 6   obsm         94493 non-null  int64  \n",
+      " 7   choc         94493 non-null  int64  \n",
+      " 8   manv         94493 non-null  int64  \n",
+      " 9   motor        94493 non-null  int64  \n",
+      " 10  occutc       817 non-null    float64\n",
+      "dtypes: float64(1), int64(8), object(2)\n",
+      "memory usage: 7.9+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usagers\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 126662 entries, 0 to 126661\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   Num_Acc      126662 non-null  int64  \n",
+      " 1   id_usager    126662 non-null  object \n",
+      " 2   id_vehicule  126662 non-null  object \n",
+      " 3   num_veh      126662 non-null  object \n",
+      " 4   place        126662 non-null  int64  \n",
+      " 5   catu         126662 non-null  int64  \n",
+      " 6   grav         126662 non-null  int64  \n",
+      " 7   sexe         126662 non-null  int64  \n",
+      " 8   an_nais      123788 non-null  float64\n",
+      " 9   trajet       126662 non-null  int64  \n",
+      " 10  secu1        126662 non-null  int64  \n",
+      " 11  secu2        126662 non-null  int64  \n",
+      " 12  secu3        126662 non-null  int64  \n",
+      " 13  locp         126662 non-null  int64  \n",
+      " 14  actp         126662 non-null  object \n",
+      " 15  etatp        126662 non-null  int64  \n",
+      "dtypes: float64(1), int64(11), object(4)\n",
+      "memory usage: 15.5+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print('caracts')\n",
+    "display(df_caracts.info())\n",
+    "print('lieux')\n",
+    "display(df_lieux.info())\n",
+    "print('vehicules')\n",
+    "display(df_vehicules.info())\n",
+    "print('usagers')\n",
+    "display(df_usagers.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nb caracts = nb lieux (ok) \n",
+    "#nb usagers > vl (ok)\n",
+    "\n",
+    "#types à déterminer"
    ]
   }
  ],
