--- a/accidentologie.ipynb
+++ b/accidentologie.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\remi\\AppData\\Local\\Temp\\ipykernel_13684\\2463547708.py:7: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_lieux = pd.read_csv('F:/Accidentologie/datas/lieux-2022.csv', sep = ';')\n"
+      "C:\\Users\\remi\\AppData\\Local\\Temp\\ipykernel_17640\\664948161.py:7: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_lieux = pd.read_csv('datas/lieux-2022.csv', sep = ';')\n"
      ]
     }
    ],
@@ -18,10 +18,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df_usagers = pd.read_csv('F:/Accidentologie/datas/usagers-2022.csv', sep = ';')\n",
-    "df_vehicules = pd.read_csv('F:/Accidentologie/datas/vehicules-2022.csv', sep = ';')\n",
-    "df_caracts = pd.read_csv('F:/Accidentologie/datas/carcteristiques-2022.csv', sep = ';')\n",
-    "df_lieux = pd.read_csv('F:/Accidentologie/datas/lieux-2022.csv', sep = ';')"
+    "df_usagers = pd.read_csv('datas/usagers-2022.csv', sep = ';')\n",
+    "df_vehicules = pd.read_csv('datas/vehicules-2022.csv', sep = ';')\n",
+    "df_caracts = pd.read_csv('datas/carcteristiques-2022.csv', sep = ';')\n",
+    "df_lieux = pd.read_csv('datas/lieux-2022.csv', sep = ';')"
    ]
   },
   {
