--- a/myenv/preprocessing.ipynb
+++ b/myenv/preprocessing.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
     "        print('************')\n",
     "        for filename, df in item.items():\n",
     "            total_rows = df.shape[0]\n",
-    "            print(f'{filename}')\n",
+    "            print(f'{filename} - {total_rows} lignes.')\n",
     "            print(f'colonne:dtype:null%')\n",
     "            for column in df.columns:\n",
     "                missing_percent = df[column].isna().sum() / total_rows * 100\n",
@@ -1348,7 +1348,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for df_list in dataframes:\n",
+    "    for item in df_list:\n",
+    "        for filename, df in item.items():\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1491,8 @@
     }
    ],
    "source": [
-    "#regrouper les dataframes qui ont des caractéristiques équivalentes (nom de colonne et dtypee)\n",
+    "#visualiser des 'groupes' de dataframes dont la structure est proche. \n",
+    "#c'est juste pour avoir une représentation \n",
     "from collections import defaultdict\n",
     "\n",
     "grouped_dataframes = defaultdict(lambda: {\"filenames\": [], \"num_cols\": 0, \"num_dtypes\": 0})\n",
@@ -1510,7 +1523,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#modifier la structure des datasets caractéristiques\n",
+    "structure_caracteristiques = {\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
