--- a/myenv/preprocessing.ipynb
+++ b/myenv/preprocessing.ipynb
@@ -2073,6 +2073,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#on va tenter une concaténation sur tous les fichiers\n",
     "full_datasets = []\n",
     "\n",
     "for i in range(0, 4, 1):\n",
@@ -2088,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -2112,6 +2113,22 @@
       "lat        487068\n",
       "long       487072\n",
       "dtype: int64\n",
+      "Num_Acc     int64\n",
+      "jour        int64\n",
+      "mois        int64\n",
+      "an          int64\n",
+      "hrmn       object\n",
+      "lum         int64\n",
+      "dep        object\n",
+      "com        object\n",
+      "agg         int64\n",
+      "int         int64\n",
+      "atm         int64\n",
+      "col         int64\n",
+      "adr        object\n",
+      "lat        object\n",
+      "long       object\n",
+      "dtype: object\n",
       "1176873 lignes.\n"
      ]
     },
@@ -2291,6 +2308,25 @@
       "situ             0\n",
       "vma         958469\n",
       "dtype: int64\n",
+      "Num_Acc      int64\n",
+      "catr         int64\n",
+      "voie        object\n",
+      "v1           int64\n",
+      "v2          object\n",
+      "circ         int64\n",
+      "nbv         object\n",
+      "vosp         int64\n",
+      "prof         int64\n",
+      "pr          object\n",
+      "pr1         object\n",
+      "plan         int64\n",
+      "lartpc      object\n",
+      "larrout     object\n",
+      "surf         int64\n",
+      "infra        int64\n",
+      "situ         int64\n",
+      "vma        float64\n",
+      "dtype: object\n",
       "1176873 lignes.\n"
      ]
     },
@@ -2486,6 +2522,23 @@
       "actp             56462\n",
       "etatp                0\n",
       "dtype: int64\n",
+      "Num_Acc          int64\n",
+      "id_usager       object\n",
+      "id_vehicule     object\n",
+      "num_veh         object\n",
+      "place            int64\n",
+      "catu             int64\n",
+      "grav             int64\n",
+      "sexe             int64\n",
+      "an_nais        float64\n",
+      "trajet           int64\n",
+      "secu1          float64\n",
+      "secu2          float64\n",
+      "secu3          float64\n",
+      "locp             int64\n",
+      "actp            object\n",
+      "etatp            int64\n",
+      "dtype: object\n",
       "2636377 lignes.\n"
      ]
     },
@@ -2664,6 +2717,18 @@
       "motor          1635811\n",
       "occutc          370510\n",
       "dtype: int64\n",
+      "Num_Acc          int64\n",
+      "id_vehicule     object\n",
+      "num_veh         object\n",
+      "senc             int64\n",
+      "catv             int64\n",
+      "obs              int64\n",
+      "obsm             int64\n",
+      "choc             int64\n",
+      "manv             int64\n",
+      "motor          float64\n",
+      "occutc         float64\n",
+      "dtype: object\n",
       "2009395 lignes.\n"
      ]
     },
@@ -2797,11 +2862,21 @@
     }
    ],
    "source": [
+    "#temporaire\n",
     "for df in full_datasets:\n",
     "    print(f'{df.duplicated().sum()} doublons.')\n",
     "    print(f'{df.isna().sum()}')\n",
+    "    print(f'{df.dtypes}')\n",
     "    print(f'{df.shape[0]} lignes.')\n",
     "    display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il va falloir faire attention à l'encodage, je ne sais pas si c'est très grave puisque les id devraient rester uniques mais je n'en suis pas certain.\n",
+    "On a des doublons"
    ]
   }
  ],
